--- a/Project - CV/index.html
+++ b/Project - CV/index.html
@@ -46,7 +46,11 @@
             </div>
             <div class="projects">
                 <h2>Projects</h2>
-                <p>Comming soon</p>
+                <p>
+                    <a href="https://github.com/BieganskiP/My-Projects.git">
+                        GitHub
+                    </a>
+                </p>
             </div>
             <div class="workexp">
                 <h2>Work Expirience</h2>
