--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <p>
                         C: <a href="tel:+48 518 935 733">+48 518 935 733</a> <br />
-                        E: <a herf="mailto:bieganski1996@gmail.com">bieganski1996@gmail.com</a> <br />
+                        E: <a href="mailto:bieganski1996@gmail.com">bieganski1996@gmail.com</a> <br />
                         A: Ul. Daszyńskiego 29/5 <br />
                         58-304 Wałbrzych
                     </p>
