--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h3><span>Customer support agent</span> | OpsTalent</h3>
                     <p>July 2021 - Currently employed | Wrocław, Poland</p>
                     <ul>
-                        <li>Profesional customer support over the phone and email</li>
+                        <li>Profesional customer support over the phone and email.</li>
                     </ul>
                 </div>  
 
@@ -161,5 +161,5 @@
         </main>
 
     </body>
-    
+
 </html>
