--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <!-- WE Cersanit -->
 
                 <div class="job">
-                    <h3><span>Production Manager</span> | Cersanit</h3>
+                    <h3><span>Manager</span> | Cersanit</h3>
                     <p>July 2020 - July 2021 | Wałbrzych, Poland</p>
                     <ul>
                         <li>Allocating jobs for the team according to the skills and qualifications to achieve best results.</li>
@@ -126,7 +126,7 @@
                     </p>
                 </div>
             <!-- My technical skills -->
-                <div class="skills1">
+                <div class="skills">
                     <h2>Tech Skills</h2>
                     <ul>
                         <li>HTML5</li>
@@ -134,15 +134,17 @@
                     </ul>
                 </div>
             <!-- Soft Skills -->
-                <div class="skills2">
+                <div class="skills">
                 <h2>Soft Skills</h2>
                 <ul>
-                    <li>English B2</li>
-                    <li>Polish Native</li>
+                    <li>Well organised</li>
+                    <li>Time manamgent</li>
+                    <li>Self develpoment</li>
+                    <li>Team worker</li>
                 </ul>
                 </div>                
             <!-- Other skills -->
-                <div class="skills2">
+                <div class="skills">
                     <h2>Languages</h2>
                     <ul>
                         <li>English B2</li>
