--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="projects">
                 <h2>Projects</h2>
                 <p>
-                    <ol><li><a href="https://bieganskip.github.io/My-Projects/">
+                    <ol><li><a href="https://bieganskip.github.io/My-CV/">
                         https://bieganskip.github.io/My-Projects/
                     </a>.............[HTML,CSS]</li>
                 </ol>
