--- a/index.html
+++ b/index.html
@@ -6,155 +6,208 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
 
         <title>My CV</title>
     </head>
 
     <body>
         <div class="wrapper">
-
-        <!-- Main part of the body -->
+            <!-- Main part of the body -->
             <main>
-            <!-- Name and title -->
+                <!-- Name and title -->
                 <div class="title">
-                <h2>Front-end developer</h2>
+                    <h3>Front-end developer</h3>
 
-                <h1><span>Patryk Biegański</span></h1>
+                    <h1><span class="colordif">Patryk Biegański</span></h1>
                 </div>
-            <!-- Short info about me -->
+                <!-- Short info about me -->
                 <div class="about">
-                <h2>About me</h2>
-                <p>
-                    I'm currently learing HTML5 and CSS with goal to become web
-                    developer. I've learned it before, but right now I'm
-                    refreshing my knowlege and trying to learn new things.
-                </p>
+                    <h2>About me</h2>
+                    <p>
+                        I'm currently learing HTML5 and CSS with goal to become
+                        web developer. I've learned it before, but right now I'm
+                        refreshing my knowlege and trying to learn new things.
+                    </p>
                 </div>
-            <!-- My projects -->
+                <!-- My projects -->
                 <div class="projects">
-                <h2>Projects</h2>
-                <p>
-                    <ol><li><a href="https://bieganskip.github.io/My-CV/">
-                        https://bieganskip.github.io/My-Projects/
-                    </a>.............[HTML,CSS]</li>
-                </ol>
-                </p>
+                    <h2>Projects</h2>
+                    <ol>
+                        <li>
+                            <a href="https://bieganskip.github.io/My-CV/">
+                                https://bieganskip.github.io/My-Projects/ </a
+                            >.............<span class="project-item">[</span
+                            ><span class="project-item2">HTML,CSS</span
+                            ><span class="project-item">]</span>
+                        </li>
+                    </ol>
                 </div>
-            <!-- My work expirience -->
-                <div class="workexp">
-                <h2>Work Expirience</h2>
-                
-                <!-- WE OpsTalent -->
+                <!-- My work expirience -->
+                <div class="work-exp">
+                    <h2>Work Expirience</h2>
 
-                <div class="job">
-                    <h3><span>Customer support agent</span> | OpsTalent</h3>
-                    <p>July 2021 - Currently employed | Wrocław, Poland</p>
-                    <ul>
-                        <li>Profesional customer support over the phone and email.</li>
-                    </ul>
-                </div>  
+                    <!-- WE OpsTalent -->
 
-                <!-- WE Cersanit -->
+                    <div class="job">
+                        <h3>
+                            <span class="colordif">Customer support agent</span>
+                            | OpsTalent
+                        </h3>
+                        <p>July 2021 - Currently employed | Wrocław, Poland</p>
+                        <ul>
+                            <li>
+                                Profesional customer support over the phone and
+                                email.
+                            </li>
+                        </ul>
+                    </div>
 
-                <div class="job">
-                    <h3><span>Manager</span> | Cersanit</h3>
-                    <p>July 2020 - July 2021 | Wałbrzych, Poland</p>
-                    <ul>
-                        <li>Allocating jobs for the team according to the skills and qualifications to achieve best results.</li>
-                        <li>Documenting and reporting all results.</li>
-                    </ul>
+                    <!-- WE Cersanit -->
 
+                    <div class="job">
+                        <h3>
+                            <span class="colordif">Manager</span> | Cersanit
+                        </h3>
+                        <p>July 2020 - July 2021 | Wałbrzych, Poland</p>
+                        <ul>
+                            <li>
+                                Allocating jobs for the team according to the
+                                skills and qualifications to achieve best
+                                results.
+                            </li>
+                            <li>Documenting and reporting all results.</li>
+                        </ul>
+                    </div>
+
+                    <!-- WE FUH M.Borowy -->
+
+                    <div class="job">
+                        <h3>
+                            <span class="colordif">Instructor</span> | FUH Marek
+                            Borowy
+                        </h3>
+                        <p>September 2018 - June 2020 | Wałbrzych, Poland</p>
+                        <ul>
+                            <li>
+                                Providing new employees with profesional
+                                training on health and safty standards.
+                            </li>
+                            <li>
+                                Upkeepig documentation about training and
+                                qualifications of employees.
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- WE Fischer -->
+
+                    <div class="job">
+                        <h3>
+                            <span class="colordif"
+                                >Senior technical support engineer</span
+                            >
+                            | Fischer Future Heat
+                        </h3>
+                        <p>April 2017 - June 2018 | Leicester, UK</p>
+                        <ul>
+                            <li>
+                                Providing tech support for customers over the
+                                phone, email and in person.
+                            </li>
+                            <li>
+                                Resolving complex issues on my own as well as in
+                                the team.
+                            </li>
+                            <li>Using high level of interpersonal skills.</li>
+                        </ul>
+                    </div>
                 </div>
-
-                <!-- WE FUH M.Borowy -->
-
-                <div class="job">
-                    <h3><span>Instructor</span> | FUH Marek Borowy</h3>
-                    <p>September 2018 - June 2020 | Wałbrzych, Poland</p>
-                    <ul>
-                        <li>Providing new employees with profesional training on health and safty standards.</li>
-                        <li>Upkeepig documentation about training and qualifications of employees.</li>
-                    </ul>
-                </div>
-
-                <!-- WE Fischer -->
-
-                <div class="job">
+                <!-- My education -->
+                <div class="education">
+                    <h2>Eductation</h2>
                     <h3>
-                        <span>Senior technical support engineer</span> | Fischer
-                        Future Heat
+                        <span>Leicester College</span><br />
+                        IT troubleshooting
                     </h3>
-                    <p>April 2017 - June 2018 | Leicester, UK</p>
                     <ul>
-                        <li>Providing tech support for customers over the phone, email and in person.</li>
-                        <li>Resolving complex issues on my own as well as in the team.</li>
-                        <li>Using high level of interpersonal skills.</li>
+                        <li>Basics of HTML, CSS and C#.</li>
+                        <li>Fixing and modifying PC hardware.</li>
+                        <li>Basics of networking.</li>
                     </ul>
-                </div>
-
-                </div>
-            <!-- My education -->
-                <div class="edu">
-                <h2>Eductation</h2>
-                <h3><span>Leicester College</span> | 2013-2015, Leicester <br /> IT troubleshooting</h3>
-                <ul>
-                    <li> Basics of HTML, CSS and C#.</li>
-                    <li> Fixing and modifying PC hardware.</li>
-                    <li> Basics of networking.</li>
-                </ul>
                 </div>
             </main>
 
-         <!-- Side bar --> 
+            <!-- Side bar -->
             <aside>
-            <!-- Photo of me-->
-                <div class="photo">
-                </div>
-            <!-- Contact info -->
-                <div class="con">
+                <!-- Photo of me-->
+                <div class="photo"></div>
+                <!-- Contact info -->
+                <div class="contacts">
                     <h2>Contacts</h2>
-
                     <p>
-                        C: <a href="tel:+48 518 935 733">+48 518 935 733</a> <br />
-                        E: <a href="mailto:bieganski1996@gmail.com">bieganski1996@gmail.com</a> <br />
-                        A: Ul. Daszyńskiego 29/5 <br />
+                        <span class="bold">C:</span>
+                        <a href="tel:+48 518 935 733">+48 518 935 733</a> <br />
+                        <span class="bold">E:</span>
+                        <a href="mailto:bieganski1996@gmail.com"
+                            >bieganski1996@gmail.com</a
+                        >
+                        <br />
+                        <span class="bold">A:</span> Ul. Daszyńskiego 29/5
+                        <br />
                         58-304 Wałbrzych
                     </p>
                 </div>
-            <!-- My technical skills -->
+                <!-- My technical skills -->
                 <div class="skills">
                     <h2>Tech Skills</h2>
                     <ul>
-                        <li>HTML5</li>
-                        <li>CSS</li>
+                        <li>
+                            <span>HTML5</span>
+                            <img
+                                src="photos/four.png"
+                                alt="4 out 5"
+                                width="50"
+                                height="10"
+                            />
+                        </li>
+                        <li>
+                            <span>CSS </span>
+                            <img
+                                src="photos/four.png"
+                                alt="4 out 5"
+                                width="50"
+                                height="10"
+                            />
+                        </li>
                     </ul>
                 </div>
-            <!-- Soft Skills -->
+                <!-- Soft Skills -->
                 <div class="skills">
-                <h2>Soft Skills</h2>
-                <ul>
-                    <li>Well organised</li>
-                    <li>Time manamgent</li>
-                    <li>Self develpoment</li>
-                    <li>Team worker</li>
-                </ul>
-                </div>                
-            <!-- Other skills -->
+                    <h2>Soft Skills</h2>
+                    <ul>
+                        <li><span>Well organised</span></li>
+                        <li><span>Time manamgent</span></li>
+                        <li><span>Self develpoment</span></li>
+                        <li><span>Team worker</span></li>
+                        <li><span>Independent</span></li>
+                        <li><span>Problem solver</span></li>
+                    </ul>
+                </div>
+                <!-- Other skills -->
                 <div class="skills">
                     <h2>Languages</h2>
                     <ul>
-                        <li>English B2</li>
-                        <li>Polish Native</li>
+                        <li><span>English B2</span></li>
+                        <li><span>Polish Native</span></li>
                     </ul>
                 </div>
             </aside>
-
         </div>
-
     </body>
-
 </html>
