--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
             <main>
                 <!-- Name and title -->
                 <div class="title">
-                    <h3>Front-end developer</h3>
+                    <h2 class="job-title">Front-end developer</h2>
 
-                    <h1><span class="colordif">Patryk Biegański</span></h1>
-                </div>
-                <!-- Short info about me -->
-                <div class="about">
-                    <h2>About me</h2>
+                    <h1>Patryk Biegański</h1>
+
                     <p>
                         I'm currently learing HTML5 and CSS with goal to become
                         web developer. I've learned it before, but right now I'm
@@ -56,8 +53,8 @@
 
                     <div class="job">
                         <h3>
-                            <span class="colordif">Customer support agent</span>
-                            | OpsTalent
+                            Customer support agent
+                            | <span class="colordif">OpsTalent</span>
                         </h3>
                         <p>July 2021 - Currently employed | Wrocław, Poland</p>
                         <ul>
@@ -72,7 +69,7 @@
 
                     <div class="job">
                         <h3>
-                            <span class="colordif">Manager</span> | Cersanit
+                            Manager | <span class="colordif">Cersanit</span>
                         </h3>
                         <p>July 2020 - July 2021 | Wałbrzych, Poland</p>
                         <ul>
@@ -89,7 +86,7 @@
 
                     <div class="job">
                         <h3>
-                            <span class="colordif">Instructor</span> | FUH Marek
+                            Instructor | <span class="colordif"></span>FUH Marek</span>
                             Borowy
                         </h3>
                         <p>September 2018 - June 2020 | Wałbrzych, Poland</p>
@@ -109,10 +106,10 @@
 
                     <div class="job">
                         <h3>
-                            <span class="colordif"
-                                >Senior technical support engineer</span
+                            Senior technical support engineer
+                            | <span class="colordif"
+                            >Fischer Future Heat</span
                             >
-                            | Fischer Future Heat
                         </h3>
                         <p>April 2017 - June 2018 | Leicester, UK</p>
                         <ul>
@@ -133,13 +130,8 @@
                     <h2>Eductation</h2>
                     <h3>
                         <span>Leicester College</span><br />
-                        IT troubleshooting
+                        Basics of Front-End Web Development 
                     </h3>
-                    <ul>
-                        <li>Basics of HTML, CSS and C#.</li>
-                        <li>Fixing and modifying PC hardware.</li>
-                        <li>Basics of networking.</li>
-                    </ul>
                 </div>
             </main>
 
