--- a/index.html
+++ b/index.html
@@ -1,205 +1,180 @@
 <!DOCTYPE html>
 <html lang="pl">
-    <head>
-        <link rel="stylesheet" href="style.css" />
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-            rel="stylesheet"
-        />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-        <title>My CV</title>
-    </head>
+    <title>My CV</title>
+  </head>
 
-    <body>
-        <div class="wrapper">
-            <!-- Main part of the body -->
-            <main>
-                <!-- Name and title -->
-                <div class="title">
-                    <h2 class="job-title">Front-end developer</h2>
+  <body>
+    <div class="wrapper">
+      <!-- Main part of the body -->
+      <main>
+        <!-- Name and title -->
+        <div class="title">
+          <h2 class="job-title">Front-end developer</h2>
 
-                    <h1>Patryk Biegański</h1>
+          <h1>Patryk Biegański</h1>
 
-                    <p>
-                        I'm currently learing HTML5 and CSS with goal to become
-                        web developer. I've learned it before, but right now I'm
-                        refreshing my knowlege and trying to learn new things.
-                    </p>
-                </div>
-                <!-- My projects -->
-                <div class="projects">
-                    <h2>Projects</h2>
-                    <ol>
-                        <li>
-                            <a href="https://bieganskip.github.io/My-CV/">
-                                https://bieganskip.github.io/My-Projects/ </a
-                            >.............<span class="project-item">[</span
-                            ><span class="project-item2">HTML,CSS</span
-                            ><span class="project-item">]</span>
-                        </li>
-                    </ol>
-                </div>
-                <!-- My work expirience -->
-                <div class="work-exp">
-                    <h2>Work Expirience</h2>
-
-                    <!-- WE OpsTalent -->
-
-                    <div class="job">
-                        <h3>
-                            Customer support agent
-                            | <span class="colordif">OpsTalent</span>
-                        </h3>
-                        <p>July 2021 - Currently employed | Wrocław, Poland</p>
-                        <ul>
-                            <li>
-                                Profesional customer support over the phone and
-                                email.
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- WE Cersanit -->
-
-                    <div class="job">
-                        <h3>
-                            Manager | <span class="colordif">Cersanit</span>
-                        </h3>
-                        <p>July 2020 - July 2021 | Wałbrzych, Poland</p>
-                        <ul>
-                            <li>
-                                Allocating jobs for the team according to the
-                                skills and qualifications to achieve best
-                                results.
-                            </li>
-                            <li>Documenting and reporting all results.</li>
-                        </ul>
-                    </div>
-
-                    <!-- WE FUH M.Borowy -->
-
-                    <div class="job">
-                        <h3>
-                            Instructor | <span class="colordif"></span>FUH Marek</span>
-                            Borowy
-                        </h3>
-                        <p>September 2018 - June 2020 | Wałbrzych, Poland</p>
-                        <ul>
-                            <li>
-                                Providing new employees with profesional
-                                training on health and safty standards.
-                            </li>
-                            <li>
-                                Upkeepig documentation about training and
-                                qualifications of employees.
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- WE Fischer -->
-
-                    <div class="job">
-                        <h3>
-                            Senior technical support engineer
-                            | <span class="colordif"
-                            >Fischer Future Heat</span
-                            >
-                        </h3>
-                        <p>April 2017 - June 2018 | Leicester, UK</p>
-                        <ul>
-                            <li>
-                                Providing tech support for customers over the
-                                phone, email and in person.
-                            </li>
-                            <li>
-                                Resolving complex issues on my own as well as in
-                                the team.
-                            </li>
-                            <li>Using high level of interpersonal skills.</li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- My education -->
-                <div class="education">
-                    <h2>Eductation</h2>
-                    <h3>
-                        <span>Leicester College</span><br />
-                        Basics of Front-End Web Development 
-                    </h3>
-                </div>
-            </main>
-
-            <!-- Side bar -->
-            <aside>
-                <!-- Photo of me-->
-                <div class="photo"></div>
-                <!-- Contact info -->
-                <div class="contacts">
-                    <h2>Contacts</h2>
-                    <p>
-                        <span class="bold">C:</span>
-                        <a href="tel:+48 518 935 733">+48 518 935 733</a> <br />
-                        <span class="bold">E:</span>
-                        <a href="mailto:bieganski1996@gmail.com"
-                            >bieganski1996@gmail.com</a
-                        >
-                        <br />
-                        <span class="bold">A:</span> Ul. Daszyńskiego 29/5
-                        <br />
-                        58-304 Wałbrzych
-                    </p>
-                </div>
-                <!-- My technical skills -->
-                <div class="skills">
-                    <h2>Tech Skills</h2>
-                    <ul>
-                        <li>
-                            <span>HTML5</span>
-                            <img
-                                src="photos/four.png"
-                                alt="4 out 5"
-                                width="50"
-                                height="10"
-                            />
-                        </li>
-                        <li>
-                            <span>CSS </span>
-                            <img
-                                src="photos/four.png"
-                                alt="4 out 5"
-                                width="50"
-                                height="10"
-                            />
-                        </li>
-                    </ul>
-                </div>
-                <!-- Soft Skills -->
-                <div class="skills">
-                    <h2>Soft Skills</h2>
-                    <ul>
-                        <li><span>Well organised</span></li>
-                        <li><span>Time manamgent</span></li>
-                        <li><span>Self develpoment</span></li>
-                        <li><span>Team worker</span></li>
-                        <li><span>Independent</span></li>
-                        <li><span>Problem solver</span></li>
-                    </ul>
-                </div>
-                <!-- Other skills -->
-                <div class="skills">
-                    <h2>Languages</h2>
-                    <ul>
-                        <li><span>English B2</span></li>
-                        <li><span>Polish Native</span></li>
-                    </ul>
-                </div>
-            </aside>
+          <p>
+            I'm currently learing HTML5 and CSS with goal to become Full-Stack
+            developer. I've learned it before, but right now I'm refreshing my
+            knowlege and trying to learn new things.
+          </p>
         </div>
-    </body>
+        <!-- My projects -->
+        <div class="projects">
+          <h2>Projects</h2>
+          <ol>
+            <li>
+              <a href="https://bieganskip.github.io/My-CV/">
+                https://bieganskip.github.io/My-Projects/ </a
+              >.............<span class="project-item">[</span
+              ><span class="project-item2">HTML,CSS</span
+              ><span class="project-item">]</span>
+            </li>
+          </ol>
+        </div>
+        <!-- My work expirience -->
+        <div class="work-exp">
+          <h2>Work Expirience</h2>
+
+          <!-- WE OpsTalent -->
+
+          <div class="job">
+            <h3>
+              Customer support agent | <span class="colordif">OpsTalent</span>
+            </h3>
+            <p>July 2021 - Currently employed | Wrocław, Poland</p>
+            <ul>
+              <li>Profesional customer support over the phone and email.</li>
+            </ul>
+          </div>
+
+          <!-- WE Cersanit -->
+
+          <div class="job">
+            <h3>Manager | <span class="colordif">Cersanit</span></h3>
+            <p>July 2020 - July 2021 | Wałbrzych, Poland</p>
+            <ul>
+              <li>
+                Allocating jobs for the team according to the skills and
+                qualifications to achieve best results.
+              </li>
+              <li>Documenting and reporting all results.</li>
+            </ul>
+          </div>
+
+          <!-- WE FUH M.Borowy -->
+
+          <div class="job">
+            <h3>Instructor | <span class="colordif">FUH Marek Borowy</span></h3>
+            <p>September 2018 - June 2020 | Wałbrzych, Poland</p>
+            <ul>
+              <li>
+                Providing new employees with profesional training on health and
+                safty standards.
+              </li>
+              <li>
+                Upkeepig documentation about training and qualifications of
+                employees.
+              </li>
+            </ul>
+          </div>
+
+          <!-- WE Fischer -->
+
+          <div class="job">
+            <h3>
+              Senior technical support engineer |
+              <span class="colordif">Fischer Future Heat</span>
+            </h3>
+            <p>April 2017 - June 2018 | Leicester, UK</p>
+            <ul>
+              <li>
+                Providing tech support for customers over the phone, email and
+                in person.
+              </li>
+              <li>
+                Resolving complex issues on my own as well as in the team.
+              </li>
+              <li>Using high level of interpersonal skills.</li>
+            </ul>
+          </div>
+        </div>
+        <!-- My education -->
+        <div class="education">
+          <h2>Eductation</h2>
+          <h3>
+            <span>Leicester College</span><br />
+            Basics of Front-End Web Development
+          </h3>
+        </div>
+      </main>
+
+      <!-- Side bar -->
+      <aside>
+        <!-- Photo of me-->
+        <div class="photo"></div>
+        <!-- Contact info -->
+        <div class="contacts">
+          <h2>Contacts</h2>
+          <p>
+            <span class="bold">C:</span>
+            <a href="tel:+48 518 935 733">+48 518 935 733</a> <br />
+            <span class="bold">E:</span>
+            <a href="mailto:bieganski1996@gmail.com">bieganski1996@gmail.com</a>
+            <br />
+            <span class="bold">A:</span> Ul. Daszyńskiego 29/5
+            <br />
+            58-304 Wałbrzych
+          </p>
+        </div>
+        <!-- My technical skills -->
+        <div class="skills">
+          <h2>Tech Skills</h2>
+          <ul>
+            <li>
+              <span>HTML5</span>
+              <img src="photos/four.png" alt="4 out 5" width="50" height="10" />
+            </li>
+            <li>
+              <span>CSS </span>
+              <img src="photos/four.png" alt="4 out 5" width="50" height="10" />
+            </li>
+          </ul>
+        </div>
+        <!-- Soft Skills -->
+        <div class="skills">
+          <h2>Soft Skills</h2>
+          <ul>
+            <li><span>Well organised</span></li>
+            <li><span>Time manamgent</span></li>
+            <li><span>Self develpoment</span></li>
+            <li><span>Team worker</span></li>
+            <li><span>Independent</span></li>
+            <li><span>Problem solver</span></li>
+          </ul>
+        </div>
+        <!-- Other skills -->
+        <div class="skills">
+          <h2>Languages</h2>
+          <ul>
+            <li><span>English B2</span></li>
+            <li><span>Polish Native</span></li>
+          </ul>
+        </div>
+      </aside>
+    </div>
+  </body>
 </html>
